data/derived/comb/progs/unify/prog8386.ml.out
Characters 21-30:
  let _ = mulByDigit 9 [9;9;9;9];;
                       ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
